Import of RJBS/Module-Starter-Plugin-TT2-0.123 from CPAN.
gitpan-cpan-distribution: Module-Starter-Plugin-TT2
gitpan-cpan-version:      0.123
gitpan-cpan-path:         RJBS/Module-Starter-Plugin-TT2-0.123.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Starter-Plugin-TT2
 
+0.123   2006-11-18
+        packaging improvements
+
 0.122   2006-11-14
         packaging improvements
         remove hard tabs in templates
