--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Starter-Plugin-TT2
 
+0.124   2007-11-09
+        add default template for Module::Install
+
 0.123   2006-11-18
         packaging improvements
 
