Import of RJBS/Module-Starter-Plugin-TT2-0.125 from CPAN.
gitpan-cpan-distribution: Module-Starter-Plugin-TT2
gitpan-cpan-version:      0.125
gitpan-cpan-path:         RJBS/Module-Starter-Plugin-TT2-0.125.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Module-Starter-Plugin-TT2
 
+0.125   2008-09-14
+        apply https://rt.cpan.org/Ticket/Display.html?id=15027
+
 0.124   2007-11-09
         add default template for Module::Install
 
